--- a/content/cases/healthcare-privacy-ai.mdx
+++ b/content/cases/healthcare-privacy-ai.mdx
@@ -1,33 +1,36 @@
 ---
-title: "Federated Learning for Healthcare"
+title: "Federated Learning Network"
 publishedAt: "2024-03-01"
-summary: "Addestramento di modelli diagnostici su dati sensibili distribuiti tra 5 ospedali, senza mai spostare i dati dei pazienti. Compliance GDPR totale."
+summary: "Implementazione di protocolli di training decentralizzato per l'analisi di dati sensibili distribuiti, preservando la data sovereignty."
 industry: "Healthcare / Research"
-impact: "GDPR Compliant"
+impact: "Privacy Preserved"
 ---
 
-## Il Problema
-Un consorzio di ricerca medica voleva addestrare un modello AI per la diagnosi precoce di patologie polmonari basandosi su TAC e Risonanze.
-Tuttavia, le normative sulla privacy (GDPR) e le policy interne degli ospedali rendevano impossibile centralizzare i dati in un unico cloud storage per il training. I dati erano "silos" isolati.
+## Il Problema della Data Governance
 
-## La Soluzione: Federated Learning
-Abbiamo implementato un'architettura di **Federated Learning**. Invece di portare i dati al modello, abbiamo portato il modello ai dati.
+Nell'ambito della ricerca collaborativa su dati sensibili, l'approccio tradizionale di centralizzazione dei dataset ("Data Lake") si scontra con barriere normative e di governance insormontabili. La necessità era addestrare modelli diagnostici robusti su dati distribuiti geograficamente, senza che il dato grezzo lasciasse mai l'infrastruttura locale di origine.
 
-### Come funziona
-1.  **Local Training**: Un'istanza "vergine" del modello viene inviata ai server locali di ogni ospedale.
-2.  **Private Update**: Ogni ospedale addestra il modello sui propri dati (che non escono mai dal perimetro sicuro).
-3.  **Aggregation**: I server locali inviano al server centrale solo i "gradienti" (aggiornamenti matematici dei pesi), non i dati.
-4.  **Global Model**: Il server centrale media i gradienti ricevuti e crea un nuovo "Global Model" più intelligente, che viene ridistribuito agli ospedali.
+## La Soluzione: Decentralized Intelligence
 
-### Sicurezza Aggiuntiva
-Abbiamo applicato tecniche di **Differential Privacy** (aggiunta di rumore statistico) ai gradienti, rendendo matematicamente impossibile fare reverse-engineering dei dati di un singolo paziente partendo dal modello.
+Abbiamo architettato una rete di **Federated Learning** che inverte il paradigma: il codice viaggia verso i dati, non viceversa.
 
-## Stack Tecnologico
--   **Framework**: PySyft / TensorFlow Federated.
--   **Orchestration**: Kubernetes (K8s) distribuito.
--   **Encryption**: Secure Multi-Party Computation (SMPC).
+### Protocollo di Aggregazione
+Il training avviene in round iterativi coordinati da un server centrale:
+1.  **Broadcast**: Il modello globale corrente viene distribuito ai nodi locali (client).
+2.  **Local Training**: Ogni nodo esegue epoch di training sui propri dati privati, calcolando i gradienti (delta dei pesi).
+3.  **Secure Aggregation**: I gradienti vengono inviati al server centrale, che li aggrega (es. Federated Averaging - FedAvg) per aggiornare il modello globale.
+4.  **Privacy-Preserving**: Applicazione di tecniche di **Differential Privacy** (aggiunta di rumore gaussiano calibrato) per impedire il reverse-engineering dei dati di training dai gradienti condivisi.
 
-## Risultati
--   **Dataset Virtuale**: Il modello finale performa come se fosse stato addestrato su un dataset di 50.000 pazienti, pur non avendo mai visto un singolo dato centralizzato.
--   **Accuracy**: 94% sull'identificazione di noduli (vs 82% dei modelli addestrati sui dati di un singolo ospedale).
--   **Privacy Garantita**: Approvato dai DPO (Data Protection Officer) di tutte le strutture sanitarie coinvolte.
+## Stack e Orchestrazione
+
+L'infrastruttura è costruita per garantire isolamento e tracciabilità:
+-   **Computational Framework**: Utilizzo di TensorFlow Federated (TFF) per la definizione delle computazioni distribuite.
+-   **Containerization**: I workload di training sono incapsulati in container Docker effimeri, orchestrati localmente su infrastrutture eterogenee.
+-   **Secure Communication**: Canali mTLS criptati per tutte le trasmissioni server-client, garantendo l'integrità del processo di aggregazione.
+
+## Validazione del Sistema
+
+L'architettura ha dimostrato la fattibilità operativa del training collaborativo:
+-   **Convergenza del Modello**: Le performance del modello federato hanno raggiunto livelli comparabili a baseline addestrate centralmente.
+-   **Data Sovereignty**: Verifica formale che nessun dato grezzo (PII/PHI) sia mai stato trasmesso o esposto esternamente.
+-   **Robustezza**: Il protocollo gestisce efficacemente nodi offline o con connessioni instabili senza compromettere il round di training globale.
